# EconomySim

./: Dockerfile  README.md  git.md  package-lock.json
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  run_sim.ipynb  server.py
backend/.devcontainer/: devcontainer.json
backend/.devcontainer/features/poetry_install/: devcontainer-feature.json  install.sh
backend/api/: README.md  city_template.py  dependencies.py  main.py  rest.py  run.py  websocket.py
backend/engine/: README.md  pyproject.toml
backend/engine/agents/: DEMAND_README.md  PRICING_README.md  README.md  demand.py  industry.py  person.py  pricing.py
backend/engine/core/: README.md  indicators.py  model.py  utils.py
backend/engine/interface/: README.md  controller.py
backend/engine/logic/: README.md
backend/engine/types/: Pricing_Type.py  README.md  city_template.py  demographic.py  demographic_metrics.py  indicators.py  industry_metrics.py  industry_type.py
backend/src/backend/api/: main.py
backend/src/backend/engine/: README.md
backend/src/backend/engine/agents/: README.md  industry.py  person.py
backend/src/backend/engine/core/: README.md  model.py
backend/src/backend/engine/interface/: controller.py
backend/src/backend/engine/logic/: pricing.py
backend/src/backend/engine/types/: IndustryType.py  Pricing_Type.py  README.md  city_template.py  (+1 more)
backend/tests/: README.md  dummy_test.py  industry_pricing_test.py
backend/tests/api/: conftest.py  test_main.py  test_rest.py  test_websocket.py
backend/tests/engine/: conftest.py
backend/tests/engine/agents/: conftest.py  test_demand.py  test_industry.py  test_person.py
backend/tests/engine/core/: conftest.py  test_indicators.py  test_model.py  test_performance.py  test_utils.py
backend/tests/engine/interface/: conftest.py  test_controller.py
(+94 files in other folders)
