[project]
name = "engine"
version = "0.1.0"
description = "Econ simulation backend with Mesa + FastAPI"
readme = "README.md"
packages = [
    {include = "engine" },
    {include = "api" }
]

[tool.poetry.dependencies]
python = "^3.11"

mesa = "^3.2.0"

fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
