[project]
name = "engine"
version = "0.1.0"
description = "Simulation Engine"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mesa >= 3.2.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry]
packages = [{include = "sim_engine", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
